[tool.poetry]
name = "data_analysis_with_python"
version = "0.1.0"
description = "my projects from freeCodeCamp course data analysis with Python"
authors = ["Theresa M"]

[tool.poetry.dependencies]
python = "^3.8"
pysimplegui = "^4.45.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
